# turboAPI

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/scripts/: check_performance_regression.py
.github/workflows/: benchmark.yml  ci.yml  db-benchmark.yml
benchmarks/: README.md  bench_regression.py  generate_charts.py
benchmarks/pgbench/: BENCHMARKS.md  Dockerfile  README.md  compare_exec_many_local.py  docker-compose.yml  pgbench_zig  run.sh  validate_runs.py
benchmarks/postgres/: BENCHMARKS.md  Dockerfile  README.md  bench.py  docker-compose.yml  seed.sql  varying_ids.lua
faster-boto3/: Dockerfile.test  README.md  bench_sigv4.py  build_accel.py  docker-compose.test.yml  docker-compose.yml  pyproject.toml
faster-boto3/benchmarks/: s3_bench.py  turbo_vs_fast_s3.py
faster-boto3/faster_boto3/: __init__.py  _patch.py  auto.py  sigv4.py
faster-boto3/scripts/: run-tests.sh
faster-boto3/socials/: tweet3.md
faster-boto3/tests/: README.md  test_boto3_baseline.py  test_s3_parity.py
faster-boto3/zig/: build.zig
faster-boto3/zig/src/: dhi_json.zig  http_client.zig  http_py.zig  main.zig  parser_py.zig  sigv4.zig  simd_parser.zig
frontend/: build.zig
frontend/app/: 404.zig  turboboto.zig  turbopg.zig
frontend/src/: css.zig  dev.zig  dispatch.zig  env.zig  fetch.zig  html.zig  html_lint.zig  main.zig  mer.zig  prerender.zig  request.zig  response.zig  router.zig  server.zig  session.zig  ssr.zig  static.zig  telemetry.zig  watcher.zig
python/: setup.py
python/turboapi/: __init__.py  zig_integration.py
python/turbopg/: __init__.py  client.py  pyproject.toml
scripts/: pre-commit
tests/: test_query_and_headers.py  test_turbopg.py
zig/: build.zig  build.zig.zon
zig/src/: db.zig  main.zig  py_gil_shim.c  router.zig  server.zig
